fix overflow css

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -66,6 +66,10 @@ ul.menuNav {
   display: flex;
   margin: 0;
 
+  @media (min-width: 1023px) {
+    overflow-x: unset;
+  }
+
   li {
     display: inline-flex;
   }
